--- a/index.html
+++ b/index.html
@@ -342,6 +342,15 @@
                             </a>
                         </div>
                     </div>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1823410826720847"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:200px"
+     data-ad-client="ca-pub-1823410826720847"
+     data-ad-slot="5171262248"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 </div>
         </section>
         <!--end info service-->
